@@ -52,6 +52,7 @@
 - remove obsolete comment in auto.net.
 - fix macro usage in lookup_program.c.
 - fix gcc5 complaints.
+- remove unused offset handling code.
 
 04/06/2014 autofs-5.1.0
 =======================
